--- a/src/sass/blocks/container.scss
+++ b/src/sass/blocks/container.scss
@@ -5,7 +5,6 @@
 @media (min-width: $desktop-widths) {
   .container {
     max-width: $desktop-widths;
-    background: #fff;
-    box-shadow: 0 0 20px 0 rgba(0,0,0,.2);
+    padding: 0 30px;
   }
 }
