--- a/src/sass/global/global.scss
+++ b/src/sass/global/global.scss
@@ -1,6 +1,7 @@
 :root {
   box-sizing: border-box;
 }
+
 *,
 *:before,
 *:after {
@@ -20,8 +21,9 @@ img {
   height: auto;
   border: 0;
 }
-@media (min-width: $desktop-widths) {
-  body {
-    background: #f2f2f2;
-  }
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
