--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,3 +8,12 @@
 @import "blocks/btn.scss";
 @import "blocks/container.scss";
 @import "blocks/visually-hidden.scss";
+@import "blocks/top-panel.scss";
+@import "blocks/main-menu.scss";
+@import "blocks/font-awesome.scss";
+@import "blocks/soclinks.scss";
+@import "blocks/page-header.scss";
+@import "blocks/logo.scss";
+@import "blocks/banner.scss";
+@import "blocks/contacts.scss";
+@import "blocks/features.scss";
