--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,8 +1,9 @@
-$font-size:           14px;
-$font-size--medium:   18px;
-$font-size--big:      21px;
-$line-height:         1.7;
-$font-family:         "PT Sans", "Arial", sans-serif;
+$font-size:              14px;
+$font-size--medium:      18px;
+$font-size--big:         21px;
+$line-height:            1.7;
+$font-family:            "Roboto", "Arial", sans-serif;
+$font-family--secondary: "Dosis", "Roboto", sans-serif;
 
-$tablet-widths:       768px;
-$desktop-widths:      1200px;
+$tablet-widths:          768px;
+$desktop-widths:         1200px;
